Estruturação do Projeto

--- a/index.html
+++ b/index.html
@@ -14,6 +14,39 @@
     <title>Detona Ralph</title>
 </head>
 <body>
+    <div class="container">
+        <div class="menu">
+            <div class="menu-time">
+                <h2 style="color:red;">Time left</h2>
+                <h2>0</h2>
+            </div>
+            <div class="menu-score">
+                <h2 style="color:red;">Your score</h2>
+                <h2>0</h2>
+            </div>
+            <div class="menu-lives">
+                <img src="" alt="">
+                <h2>x3</h2>
+            </div>
+        </div>
+        <div class="panel">
+            <div class="panel-row">
+                <div class="square enemy" id="1"></div>
+                <div class="square" id="2"></div>
+                <div class="square" id="3"></div>
+            </div>
+            <div class="panel-row">
+                <div class="square" id="4"></div>
+                <div class="square" id="5"></div>
+                <div class="square" id="6"></div>
+            </div>
+            <div class="panel-row">
+                <div class="square" id="7"></div>
+                <div class="square" id="8"></div>
+                <div class="square" id="9"></div>
+            </div>
+        </div>
+    </div>
     
     <script defer src="./src/scripts/engine.js"></script>
 </body>
