Implementando listener de hitbox e movimento

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <div class="menu">
             <div class="menu-time">
                 <h2 style="color:red;">Time left</h2>
-                <h2>0</h2>
+                <h2 id="time-left">0</h2>
             </div>
             <div class="menu-score">
                 <h2 style="color:red;">Your score</h2>
-                <h2>0</h2>
+                <h2 id="score">0</h2>
             </div>
             <div class="menu-lives">
                 <img src="./src/images/player.png" alt="foto do jogador" height="60px">
